--- a/resume/static/resume/css/styles.css
+++ b/resume/static/resume/css/styles.css
@@ -6,7 +6,8 @@ body {
 }
 
 header {
-    background-color: #103840;
+
+    background-color: #20AA76;
     color: #fff;
     text-align: left;
     padding: 10px;
