--- a/templates/base.html
+++ b/templates/base.html
@@ -16,11 +16,13 @@
         </div>
         <div class="right-header">
             <nav>
+                {% if request.user.is_authenticated %}
                 <a href="{% url 'user-profile' %}" class="active-menu">RESUME</a>
-                <a href="#" class="inactive-menu">STOCKS</a>
-                <a href="#" class="inactive-menu">GAME</a>
-                <a href="#" class="inactive-menu">BLOG</a>
-                <a href="#" class="inactive-menu">SHOP</a>
+                {% endif %}
+                <a href="#" class="active-menu">Buy me a Tee</a>
+<!--                <a href="#" class="inactive-menu">GAME</a>-->
+<!--                <a href="#" class="inactive-menu">BLOG</a>-->
+<!--                <a href="#" class="inactive-menu">SHOP</a>-->
                 {% if request.user.is_authenticated %}
                     <a href="#" class="active-menu">Hi {{request.user.username}}</a>
                 {% else %}
