--- a/templates/godeep/homepage.html
+++ b/templates/godeep/homepage.html
@@ -9,6 +9,6 @@
     <br><br><br>
     <h1> Whatever you start, GoDeep ... </h1>
     <img src="{% static 'resume/images/tiger.webp' %}" alt="TigerImage">
-    <h1> Whatever your mind can conceive and believe it can achieve</h1>
+    <h1> Whatever your mind can conceive and believe, it can achieve</h1>
 </main>
 {% endblock %}
