--- a/resume/static/resume/css/profile-styles.css
+++ b/resume/static/resume/css/profile-styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .sidebar {
-    background-color: #265f6c;
+    background-color: #0C4B33;
     font: #333;
     padding: 20px;
     width: 200px;
