Adding to nuances

--- a/templates/godeep/profile.html
+++ b/templates/godeep/profile.html
@@ -45,9 +45,9 @@
     <div class="content">
       <div id="info-content" class="profile-content">
         <!-- Content for Personal Information -->
-        <h2>Personal Information</h2>
+        <h2>Donation</h2>
         <p>
-		User's personal information goes here.
+		    Here you can buy me a Tee and support me for improving website development
 		</p>
       </div>
       <div id="cv-content" class="profile-content">
