--- a/templates/godeep/profile.html
+++ b/templates/godeep/profile.html
@@ -37,7 +37,7 @@
         <li><a href="#" id="cv-link">English CV</a></li>
         <li><a href="#" id="german-link">German CV</a></li>
         <li><a href="#" id="settings-link">Edit Data</a></li>
-        <li><a href="#" id="info-link">Buy me a Tee</a></li>
+        <li><a href="{% url 'donation' %}" id="info-link">Buy me a Tee</a></li>
         <li><a href="{% url 'sign-out' %}" id="#">sign out</a></li>
 
       </ul>
