--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
 <!--                <a href="#" class="inactive-menu">BLOG</a>-->
 <!--                <a href="#" class="inactive-menu">SHOP</a>-->
                 {% if request.user.is_authenticated %}
-                    <a href="#" class="active-menu">Hi {{request.user.username}}</a>
+                    <a class="active-menu">Hi {{request.user.username}}</a>
                 {% else %}
                     <a href="{% url 'sign-in' %}" class="active-menu">sign in</a>
                 {% endif %}
