fixing pdf bugs 1

--- a/templates/godeep/profile.html
+++ b/templates/godeep/profile.html
@@ -24,7 +24,6 @@
     padding: 20px;
     width: 200px;
 	border-right: 2px solid #333; /* Add a white vertical line */
-
     }
 
     </style>
@@ -58,7 +57,7 @@
         <div class="top-navbar">
             <div class="button-container">
             <a class="button save" href="{% url 'print-pdf' person.pk %}">PDF</a>
-            <button class="button share">Share</button>
+            <button class="button share">Guide</button>
         </div>
     </div>
         <div class="cv-container">
@@ -71,8 +70,16 @@
                     <img class="img1" src="{% static 'resume/images/default_image.jpg' %}" alt="empty"
                      style="width: 200px; height: 200px;">
             {% endif %}
+            {% if person.profile.first_name_resume %}
             <h1>{{person.profile.first_name_resume|upper}} {{person.profile.last_name_resume|upper}}</h1>
+            {% else %}
+            <h1> Your Name </h1>
+            {% endif %}
+            {% if person.profile.user_title %}
             <h1>{{person.profile.user_title|upper}}</h1><br>
+            {% else %}
+            <h1> Your Job </h1>
+            {% endif %}
             <h3>INFO:</h3>
             <ul class="ul-type-1">
                 <li>Date of Birth: {{person.profile.date_of_birth}}</li>
@@ -110,7 +117,7 @@
             <h1>WORK EXPERIENCE</h1>
             {% with work_experiences=person.work_experiences.all|dictsortreversed:'start_date'%}
                 {% for  work_experience in work_experiences %}
-                    <h2>{{work_experience.last_position}}|{{ work_experience.company|upper}}</h2>
+                    <h2>{{work_experience.last_position|upper}}|{{ work_experience.company|upper}}</h2>
                     <p>From:{{work_experience.start_date}}   TO:{{work_experience.finish_date}}
                     - {{ work_experience.city}}|{{work_experience.country}}</p><br>
                     <p>{{ work_experience.description}}</p><br>
@@ -120,38 +127,41 @@
 
             {% if person.educations.all %}
             <h1>EDUCATION</h1>
-                {% for edu in person.educations.all%}
-                    <h2>{{edu.degree}}|{{edu.institute}}</h2>
-                    <p>{{edu.finish_date}}</p><br>
+            {% with educations=person.educations.all|dictsortreversed:'finish_date'%}
+                {% for edu in educations %}
+                    <h2>{{edu.degree|upper}}|{{edu.institute|upper}}</h2>
+                    <p>{{edu.finish_date}}</p>
+                    <p>{{edu.description}}</p><br>
                 {% endfor %}
+            {% endwith %}
             {% endif %}
 
             {% if person.skills.all %}
             <h1>SKILLS</h1>
                 {% for sk in person.skills.all%}
-                    <h2>{{sk.title}}|{{sk.level_of_skill}}</h2>
+                    <h2>{{sk.title|upper}}|{{sk.level_of_skill|upper}}</h2>
                     <p>{{sk.description}}</p><br>
                 {% endfor %}
             {% endif %}
             {% if person.languages.all %}
             <h1>LANGUAGES</h1>
                 {% for lang in person.languages.all%}
-                    <h2>{{lang.title}}|{{lang.level_of_language}}</h2>
+                    <h2>{{lang.title|upper}}|{{lang.level_of_language|upper}}|{{lang.certificate|upper}}</h2>
                     <p>{{lang.description}}</p><br>
                 {% endfor %}
             {% endif %}
             {% if person.projects.all %}
             <h1>PROJECTS</h1>
                 {% for pro in person.projects.all%}
-                    <h2>{{pro.title}} </h2>
+                    <h2>{{pro.title|upper}} </h2>
                     <p>{{pro.description}}</p>
                 {% endfor %}
             {% endif %}
             {% if person.courses.all %}
             <h1>COURSES</h1>
                     {% for cou in person.courses.all%}
-                    <h2>{{cou.title}} </h2>
-                    <p>{{cou.description}}</p>
+                    <h2>{{cou.title|upper}}|{{cou.period|upper}}|{{cou.certificate|upper}}</h2>
+                    <p>{{cou.description}}</p><br>
                 {% endfor %}
             {% endif %}
 
@@ -166,7 +176,7 @@
         <div class="top-navbar">
             <div class="button-container">
             <a href="{% url 'print-pdf-de' person.pk %}" class="button export">PDF</a>
-            <button class="button share">Share</button>
+            <button class="button share">Guide</button>
         </div>
         </div>
         <div class="cv-container-german">
@@ -179,8 +189,16 @@
                     <img class="img1" src="{% static 'resume/images/default_image.jpg' %}" alt="empty"
                      style="width: 200px; height: 200px;">
             {% endif %}
+            {% if person.benutzer_profil.first_name_resume %}
             <h1>{{person.benutzer_profil.first_name_resume|upper}} {{person.benutzer_profil.last_name_resume|upper}}</h1>
+            {% else %}
+            <h1> Ihr Name </h1>
+            {% endif %}
+            {% if person.benutzer_profil.user_title %}
             <h1>{{person.benutzer_profil.user_title|upper}}</h1><br>
+            {% else %}
+            <h1> Ihr Titel </h1>
+            {% endif %}
             <h3>INFO:</h3>
             <ul class="ul-type-1">
                 <li>Geburtsdatum: {{person.benutzer_profil.date_of_birth}}</li>
@@ -189,7 +207,7 @@
             <ul class="ul-type-1">
                 <li>E-MAIL: {{person.email}}</li>
                 <li>HANDY: {{person.benutzer_profil.phone_number}}</li>
-                <li>ADDRESS: {{person.benutzer_profil.home_address}}</li>
+                <li>ADRESSE: {{person.benutzer_profil.home_address}}</li>
             </ul><br>
             <h3>QUALITÄTEN:</h3>
             <ul class="ul-type-1">
@@ -272,12 +290,11 @@
              <li> <a href="{% url 'images' %}"> Images </a></li>
              <li> <a href="{% url 'qualities' %}"> Qualities </a></li>
              <li> <a href="{% url 'hobbies' %}"> Hobbies </a></li>
-             <li> <a href="{% url 'social-media' %}"> Social Media </a></li>
+             <li> <a href="#"> Social Media (not active) </a></li>
              <li> <a href="{% url 'change-password' %}"> Change Password </a></li>
 
           </ul>
           <br><br>
-
           <h4> German CV data </h4>
           <ul>
              <li> <a href="{% url 'daten' %}"> Benutzer Daten </a></li>
@@ -288,9 +305,9 @@
              <li> <a href="{% url 'projekte' %}"> Projekte </a></li>
              <li> <a href="{% url 'kurse' %}"> Kurse </a></li>
              <li> <a href="{% url 'fotos' %}"> Fotos </a></li>
-             <li> <a href="{% url 'kompetenzen' %}"> Kompetenzen </a></li>
+             <li> <a href="{% url 'kompetenzen' %}"> Qualitäten </a></li>
              <li> <a href="{% url 'hobbys' %}"> Hobbys </a></li>
-             <li> <a href="{% url 'sozial-medien' %}"> Sozial Medien </a></li>
+             <li> <a href="#"> Sozial Medien (not active)</a></li>
 
           </ul>
       </div>
