--- a/templates/resume/hobbys.html
+++ b/templates/resume/hobbys.html
@@ -77,7 +77,7 @@
     </div>
     <hr style="margin-top: 5px; margin-bottom: 5px;">
     <ul style="padding-left: 0;">
-        {% for hobby in hobbies %}
+        {% for hobby in hobbys %}
         <li style="display: flex; align-items: flex-start; justify-content: space-between; margin-bottom: 10px;">
             <div>
                 {{ hobby.title }}
