--- a/templates/donation/callback.html
+++ b/templates/donation/callback.html
@@ -5,14 +5,23 @@
 
 {% block content %}
 {% if is_paid %}
-<p> successfully paid </p>
+<div align="center">
+<p align="center"> successfully paid </p>
 <p> thankyou for supporting us </p>
+<p> پرداخت موفقیت آمیز بود </p>
+<p> از همراهی شما ممنونم </p>
 <a href="{% url 'homepage' %}"> back </a>
+</div>
 
 {% else %}
-<p> Error in payment </p>
+<div align="center">
+<p > Error in payment </p>
 <p> maybe next time </p>
+<p> پرداخت ناموفق </p>
+<p> در هر صورت از همراهی شما ممنونم </p>
 <a href="{% url 'homepage' %}"> back </a>
+</div>
+
 
 {% endif %}
 {% endblock %}
