--- a/templates/resume/images.html
+++ b/templates/resume/images.html
@@ -66,7 +66,8 @@
         </div>
         <input type="submit" value="submit"  class="btn btn-primary">
     </form>
-    <br><br><br>
+    <br><br>
+    <p align="middle">upload both images in the same time, other than that you will face an error</p><br>
     <div style="display: flex; justify-content: space-between;">
         <h3 style="margin: 0;">Images List</h3>
         <a href="{% url 'user-profile' %}" style="margin: 0;">Back to profile</a>
