--- a/templates/resume/information.html
+++ b/templates/resume/information.html
@@ -75,7 +75,7 @@
                     {{ info_form.user_title}}
                 </div>
                 <div class="form-group">
-                    <label for="{{ info_form.date_of_birth.id_for_label }}" style="width: 100%;">Date of birth:</label>
+                    <label for="{{ info_form.date_of_birth.id_for_label }}" style="width: 100%;">Date of birth (yyyy-mm-dd):</label>
                     {{ info_form.date_of_birth}}
                 </div>
             </div>
