--- a/templates/resume/work-experience.html
+++ b/templates/resume/work-experience.html
@@ -53,7 +53,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="{{ work_experience.start_date.id_for_label }}" style="width: 100%;">Start date:</label>
+                    <label for="{{ work_experience.start_date.id_for_label }}" style="width: 100%;">Start date(yyyy-mm-dd):</label>
                     {{ work_experience.start_date}}
                 </div>
                 <div class="form-group">
@@ -71,7 +71,7 @@
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="{{ work_experience.finish_date.id_for_label}}" style="width: 100%;">Finish date:</label>
+                    <label for="{{ work_experience.finish_date.id_for_label}}" style="width: 100%;">Finish date(yyyy-mm-dd):</label>
                     {{ work_experience.finish_date }}
                 </div>
                 <div class="form-group">
