--- a/templates/resume/sprachen.html
+++ b/templates/resume/sprachen.html
@@ -80,7 +80,7 @@
     </form>
     <br><br><br>
     <div style="display: flex; justify-content: space-between;">
-        <h3 style="margin: 0;">Languages List</h3>
+        <h3 style="margin: 0;">Sprachen List</h3>
         <a href="{% url 'user-profile' %}" style="margin: 0;">Back to profile</a>
     </div>
     <hr style="margin-top: 5px; margin-bottom: 5px;">
