--- a/templates/godeep/change-password.html
+++ b/templates/godeep/change-password.html
@@ -36,7 +36,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-<p>You may enter your skills data here</p>
+<br><p align="middle">You may Change your password here</p>
 <div class="container">
     <form method="post">
         {% csrf_token %}
