fix writing issues + pdf output

--- a/templates/donation/donation.html
+++ b/templates/donation/donation.html
@@ -172,6 +172,21 @@ body{
 
 
 {% block content %}
+<p align="middle"> دوست عزیز برای همراهی با سایت
+میتونی یا به طور مستقیم به شماره کارت زیر
+مقدار پولی که دوست داری به سایت کمک کنی رو واریز کنی
+</p>
+
+<p align="middle">
+یا با یکی از گزینه های زیر
+با سایت همراهی کنی
+تا این سایت برای دوستات هم بهتر بشه
+</p><br>
+
+<p align="middle"> شماره کارت: </p>
+<p align="middle"> 6037.9919.4976.7366</p>
+<p align="middle"> به نام احسان احمدی </p>
+
  <div class="wrapper">
      {% for donation in donations %}
      <form method="post">
