--- a/templates/resume/kompetenzen.html
+++ b/templates/resume/kompetenzen.html
@@ -36,7 +36,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-<p>You may enter your skills data here</p>
+<p>You may enter your competences data here</p>
 <div class="container">
     <form method="post" action="{% url 'kompetenzen' %}">
         {% csrf_token %}
