last bug fix before releaseL

--- a/templates/donation/callback.html
+++ b/templates/donation/callback.html
@@ -19,6 +19,8 @@
 <p> maybe next time </p>
 <p> پرداخت ناموفق </p>
 <p> در هر صورت از همراهی شما ممنونم </p>
+<p> واریز مستقیم به شماره کارت زیر امکان‌پذیر است </p>
+<h3> 6037.9919.4976.7366 </h3>
 <a href="{% url 'homepage' %}"> back </a>
 </div>
 
