--- a/templates/donation/donation.html
+++ b/templates/donation/donation.html
@@ -172,20 +172,11 @@ body{
 
 
 {% block content %}
-<p align="middle"> دوست عزیز برای همراهی با سایت
-میتونی یا به طور مستقیم به شماره کارت زیر
-مقدار پولی که دوست داری به سایت کمک کنی رو واریز کنی
-</p>
-
-<p align="middle">
-یا با یکی از گزینه های زیر
-با سایت همراهی کنی
-تا این سایت برای دوستات هم بهتر بشه
-</p><br>
-
-<p align="middle"> شماره کارت: </p>
-<p align="middle"> 6037.9919.4976.7366</p>
-<p align="middle"> به نام احسان احمدی </p>
+<h2 align="middle"> Support Website:</h2><br>
+<p align="middle"> either with below card No. </p>
+<h4 align="middle"> 6037.9919.4976.7366</h4>
+<p align="middle"> Ehsan Ahmadi </p><br>
+<p align="middle"> or in below ways:</p>
 
  <div class="wrapper">
      {% for donation in donations %}
