--- a/templates/resume/fotos.html
+++ b/templates/resume/fotos.html
@@ -66,7 +66,13 @@
         </div>
         <input type="submit" value="submit"  class="btn btn-primary">
     </form>
-    <br><br><br>
+     <br><br>
+    <p align="middle">
+        <li> Best profile image size: square ratio, >= 200*200 </li>
+        <li> Best signature imge size: rectangle ratio, >= 200*100 </li>
+        <li> Submit images simultaneously, to avoid errors </li>
+        <li> Just keep one item in images list </li>
+    </p><br>
     <div style="display: flex; justify-content: space-between;">
         <h3 style="margin: 0;">Fotos List</h3>
         <a href="{% url 'user-profile' %}" style="margin: 0;">Back to profile</a>
