--- a/templates/godeep/profile.html
+++ b/templates/godeep/profile.html
@@ -8,7 +8,7 @@
     <style>
 
     header {
-
+        font-size: 14px;
         background-color: #20AA76;
         color: #fff;
         text-align: left;
